2022-10-12T08:26:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233158407 # 515
* notice: last 14d: unq all: 5 7
* notice: prev accum: outdated-unq outdated-all / unq all: 104 148 / 109 153
* notice: next accum: outdated-unq outdated-all / unq all: 105 149 / 111 156
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2022-09-28] / [2022-10-12]

2022-10-10T08:31:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3217897699
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 103 147 / 109 153
* notice: next accum: outdated-unq outdated-all / unq all: 104 148 / 109 153
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-26] / []

2022-10-07T08:26:20Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3203327491
* notice: last 14d: unq all: 3 6
* notice: prev accum: outdated-unq outdated-all / unq all: 102 146 / 109 153
* notice: next accum: outdated-unq outdated-all / unq all: 103 147 / 109 153
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-23] / []

2022-10-06T08:27:15Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3195669785
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 101 145 / 109 153
* notice: next accum: outdated-unq outdated-all / unq all: 102 146 / 109 153
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-09-22] / []

2022-10-06T01:45:59Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3193937034