@@ -1,3 +1,11 @@
+2022-10-14T08:28:10Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3248512024 # 521
+* notice: last 14d: unq all: 5 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 105 149 / 111 156
+* notice: next accum: outdated-unq outdated-all / unq all: 106 150 / 111 156
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-09-30] / []
+
 2022-10-12T08:26:07Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3233158407 # 515
 * notice: last 14d: unq all: 5 7
